# design-and-impl-c-

./: README.md
Reference counting GC/: All-in-one.txt  CMakeLists.txt  README.md
Reference counting GC/include/gc/: GCObject.h
Reference counting GC/src/: main.cpp
Thread safe Reference counting GC/: README.md
Thread safe Reference counting GC/docs/: sample_output.txt
Thread safe Reference counting GC/include/gc/: GCMulti.h  GCObject.h  Ref.h
